@@ -1,3 +1,8 @@
+2008-02-28  Marcus D. Hanwell  <marcus@cryos.org>
+
+	* libavogadro/src/engines/surfaceengine.cpp: Update the surface engine
+	to use the new features of the GridData class - requires fresh OB SVN.
+
 2008-02-21  Marcus D. Hanwell  <marcus@cryos.org>
 
 	* libavogadro/src/glwidget.cpp: Fixed up some of the makeCurrent and
